--- a/templates/ajax/game/town/posts.html.twig
+++ b/templates/ajax/game/town/posts.html.twig
@@ -56,6 +56,10 @@
                     <div class="crowmsg {% if not app.user.preferSmallAvatars %}fixMargin{% endif %}">{{ 'Dies ist eine offizielle Nachricht.'|trans({},'game') }} <a class="help-button"><div class="tooltip help">{{ 'Diese Nachricht wurde dir vom Raben persönlich überbracht. Er schwebt über der Stadt und wirft immer ein wachsames Auge auf dich...'|trans({},'global') }}</div>{{ 'Hilfe'|trans({},'global') }}</a></div>
                 {% endif %}
 
+                {% if post.originalRecipient is not null and post.originalRecipient != post.recipient %}
+                    [ <i>{{ 'Wenn der Name auf der Rückseite dieses kleinen Briefs korrekt ist, war diese Nachricht in Wirklichkeit für %citizen%! Durch einen seltsamen Zufall ist sie irgendwie bei dir gelanded ...'|trans({'%citizen%': '<strong>' ~ post.originalRecipient.name ~ '</strong>'},'game')|raw }}</i> ]<br /><br />
+                {% endif %}
+
                 {% if post.hidden %}
                     <div class="crowmsg {% if not app.user.preferSmallAvatars %}fixMargin{% endif %}">{{ 'Der Rabe hat diese Nachricht zerrissen.'|trans({},'game') }}</div>
                 {% else %}
