--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -122,17 +122,18 @@
                                 <div class="ghoul-hunger-indicator" style="left: 40%"></div>
                             </div>
                             {% if hunger > 40 %}
-                                <div class="ghoul-message"><img src="{{ asset('build/images/icons/small_warning.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
+                                <div class="ghoul-message hide-sm"><img src="{{ asset('build/images/icons/small_warning.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
                             {% endif %}
-                            <div class="tooltip">
+                            <div class="tooltip help">
                                 {{ (role.message ?? 'Du bist der %rolename% dieser Stadt.')|trans({'%rolename%': role.label|trans({}, 'game')}, 'game')}}
+                                <br />
                                 <div class="ghoul-hunger-container hide-md hide-lg hide-desktop">
                                     <div class="ghoul-hunger-background"></div>
                                     <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
                                     <div class="ghoul-hunger-indicator" style="left: 40%"></div>
                                 </div>
-                                {% if hunger > 400 %}
-                                    <div class="ghoul-message hide-lg hide-desktop">{{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
+                                {% if hunger > 40 %}
+                                    <div class="ghoul-message hide-lg hide-desktop"><img src="{{ asset('build/images/icons/small_warning.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
                                 {% endif %}
                             </div>
                         {% endif %}
