--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -197,7 +197,7 @@
                         </div>
                     </button>
                     <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Thrown') }}">
-                        {{ 'Leiche aus der Stadt ziehen'|trans({},'game') }} (<div class="ap">2</div>)
+                        <img alt="" src="{{ asset('build/images/emotes/arrowright.gif') }}" />{{ 'Leiche aus der Stadt ziehen'|trans({},'game') }}
                         <div class="tooltip help">
                             {{'Wenn du eine Leiche entsorgen möchtest, ohne dafür Wasser zu verbrauchen, kannst du sie <strong>nach draußen ziehen</strong>. Diese Aktion verbraucht <strong>2 Aktionspunkte</strong>.'|trans({}, 'game')|raw}}
                         </div>
