--- a/templates/ajax/game/jobs.html.twig
+++ b/templates/ajax/game/jobs.html.twig
@@ -20,10 +20,7 @@
 {% block ajax %}
     <div class="row">
         <div class="cell padded rw-4 hide-md hide-sm">
-            {% set img = 'welcome1.jpg' %}
-            {% if app.request.locale != 'de' %}
-                {% set img='welcome1_' ~ app.request.locale ~ '.jpg' %}
-            {% endif %}
+            {% set img = random(['welcome1','welcome2']) ~ (app.request.locale != 'de' ? ('_' ~ app.request.locale) : '') ~ '.jpg' %}
             <img style="width: 100%; border: 1px solid #5c2b20;" alt="" src="{{ asset('build/images/professions/select/' ~ img) }}">
             {{ block('jobhelp') }}
         </div>
