--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -273,7 +273,7 @@ ul.subscriptions {
     &:before { display: table;}
     &:after {display: block; height: 0;}
     background: linear-gradient(to top, #784a2b, 50%, #965c36);
-    &.header-variant-crow { background: linear-gradient(to top, #522828, 50%, #773939); }
+    &.header-variant-crow { background: rgba(0,0,0,0.3); }
     &.header-variant-dev { background: #006495; }
     a.link { color: white; text-decoration: none }
   }
@@ -318,12 +318,17 @@ ul.subscriptions {
 
   &>.forum-post-content {
     padding-left: 10px; padding-top: 10px; /*max-height: 750px; overflow: auto;*/
-    background-color: #4a261e; border-top: 1px solid #00000066; padding-right: 4px; word-break: break-word;
+    border-top: 1px solid #00000066; padding-right: 4px; word-break: break-word;
 
     &.marked { background-color: #8b7700; }
 
     .forum-content-format();
     
+  }
+
+  &.forum-post-variant-crow {
+    background: url("../../img/forum/crowMsg_bg.gif") no-repeat top left, #5c2b20;
+    &>.forum-post-content { border-top: none; }
   }
 
   &.forum-post-search-result .forum-post-content {
@@ -334,7 +339,6 @@ ul.subscriptions {
 
   &>.forum-post-footer {
     padding: 5px;
-    background-color: #4a261e;
     font-size: 1rem;
     color: rgba(0,0,0,0.2);
 
