--- a/templates/ajax/forum/search_result.html.twig
+++ b/templates/ajax/forum/search_result.html.twig
@@ -8,41 +8,45 @@
 
     <div class="forum-posts">
         {% for post in posts %}
-            <div class="forum-post forum-post-search-result" id="{{post.id}}">
-                    <div class="forum-post-header {% if post.owner.name == 'Der Rabe' %}header-variant-crow{% elseif post.type == "DEV" %}header-variant-dev{% endif %}">
-                        <i>
-                            {% if post.date >= 'today'|to_date %}
-                                {{ 'Heute um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
-                            {% elseif post.date >= 'yesterday'|to_date %}
-                                {{ 'Gestern um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
-                            {% else %}
-                                {{ post.date|format_datetime('medium', 'short') }}
-                            {% endif %}
-                        </i>
-                        {% if (post.owner.avatar) %}
-                            {% if post.owner.name == 'Der Rabe' %}
-                                <div class="avatarcrow small"><img alt="" src="{{ asset('build/images/forum/crow/crow.small.' ~ (app.request.locale|e('html_attr')|split('_', 2))[0] ~ '.png') }}"></div>
-                            {% else %}
-                                <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ path('app_web_avatar', {'uid': post.owner.id, 'name': post.owner.avatar.smallName, 'ext': post.owner.avatar.format}) }}"></div>
-                            {% endif %}
+            {% set variant = null %}
+            {% if post.owner.name == 'Der Rabe' or post.type == "CROW" %}{% set variant = 'crow' %}{% endif %}
+            {% if post.type == "DEV" %}{% set variant = 'dev' %}{% endif %}
+
+            <div class="forum-post {% if variant is not null %}forum-post-variant-{{ variant }}{% endif %} forum-post-search-result" id="{{post.id}}">
+                <div class="forum-post-header {% if variant is not null %}header-variant-{{ variant }}{% endif %}">
+                    <i>
+                        {% if post.date >= 'today'|to_date %}
+                            {{ 'Heute um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
+                        {% elseif post.date >= 'yesterday'|to_date %}
+                            {{ 'Gestern um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
                         {% else %}
-                            <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
+                            {{ post.date|format_datetime('medium', 'short') }}
                         {% endif %}
-                        <b>
-                            {% if post.owner.name == 'Der Rabe' %}
-                                {{ 'Der Rabe'|trans({},'global') }}
-                            {% elseif post.type == "DEV" %}
-                                {{ post.owner.name }}
-                            {% else %}
-                                {{ post.owner.name }}
-                            {% endif %}
-                        </b>
-                        <div class="found-in">{{ post.searchForum.title }} <i class="fa fa-caret-right"></i> <a x-ajax-href="{{ path('forum_jump_view', {pid: post.id}) }}" x-ajax-target="#content">{{ post.thread.title }}</a></div>
-                    </div>
-                    <div class="forum-post-content">
-                        {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
-                    </div>
+                    </i>
+                    {% if (post.owner.avatar) %}
+                        {% if post.owner.name == 'Der Rabe' %}
+                            <div class="avatarcrow small"><img alt="" src="{{ asset('build/images/forum/crow/crow.small.' ~ (app.request.locale|e('html_attr')|split('_', 2))[0] ~ '.png') }}"></div>
+                        {% else %}
+                            <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ path('app_web_avatar', {'uid': post.owner.id, 'name': post.owner.avatar.smallName, 'ext': post.owner.avatar.format}) }}"></div>
+                        {% endif %}
+                    {% else %}
+                        <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
+                    {% endif %}
+                    <b>
+                        {% if post.owner.name == 'Der Rabe' %}
+                            {{ 'Der Rabe'|trans({},'global') }}
+                        {% elseif post.type == "DEV" %}
+                            {{ post.owner.name }}
+                        {% else %}
+                            {{ post.owner.name }}
+                        {% endif %}
+                    </b>
+                    <div class="found-in">{{ post.searchForum.title }} <i class="fa fa-caret-right"></i> <a x-ajax-href="{{ path('forum_jump_view', {pid: post.id}) }}" x-ajax-target="#content">{{ post.thread.title }}</a></div>
                 </div>
+                <div class="forum-post-content">
+                    {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
+                </div>
+            </div>
         {% endfor %}
     </div>
 
