--- a/templates/ajax/game/town/posts.html.twig
+++ b/templates/ajax/game/town/posts.html.twig
@@ -13,8 +13,11 @@
     <h5>{% trans from 'game'%}Betreff:{% endtrans %} {{thread.title}}</h5>
 
     {% for post in posts %}
-        <div class="forum-post {% if not post.owner %}crow-pm{% endif %}">
-            <div class="forum-post-header {% if not post.owner or post.owner.user.name == 'Der Rabe' %}header-variant-crow{% endif %}">
+        {% set variant = null %}
+        {% if not post.owner or post.owner.user.name == 'Der Rabe' %}{% set variant = 'crow' %}{% endif %}
+
+        <div class="forum-post {% if variant is not null %}forum-post-variant-{{ variant }}{% endif %} {% if not post.owner %}crow-pm{% endif %}">
+            <div class="forum-post-header {% if variant is not null %}header-variant-{{ variant }}{% endif %}">
                 <i>
                     {% if post.date.format('Ymd') == today|date("Ymd") %}
                         {{ 'Heute um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
