Adjust login screen

--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -92,3 +92,7 @@ html.lang-base-es .forum-post > .forum-post-content .modAnnounce, html.lang-base
 html.lang-base-en .soul .friend { background: url("../img/soul/refererHeart_en.png") no-repeat center top; }
 html.lang-base-fr .soul .friend { background: url("../img/soul/refererHeart_fr.png") no-repeat center top; }
 html.lang-base-es .soul .friend { background: url("../img/soul/refererHeart_es.png") no-repeat center top; }
+
+html.lang-base-en div.or { background: url("../img/or.en.png") no-repeat center; }
+html.lang-base-fr div.or { background: url("../img/or.fr.png") no-repeat center; }
+html.lang-base-es div.or { background: url("../img/or.es.png") no-repeat center; }
