--- a/templates/ajax/public/login.html.twig
+++ b/templates/ajax/public/login.html.twig
@@ -28,18 +28,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="padded cell ro-6 rw-6 ro-md-0 rw-md-12">
+                    <div class="padded cell ro-3 rw-6 ro-md-0 rw-md-12">
                         <a href="{{ url('gateway-etwin') }}" target="_self"><button><img style="width: 16px;" alt="" src="{{ asset('build/images/eternal-twin/icon_small.png') }}">{{ 'Über EternalTwin einloggen'|trans({},'login') }}</button></a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="padded cell ro-6 rw-6 ro-md-0 rw-md-12">
+                    <div class="padded cell ro-3 rw-6 ro-md-0 rw-md-12">
                         <a href="{{ url('gateway-etwin-reg') }}" target="_blank"><button class="blue"><img style="width: 16px;" alt="" src="{{ asset('build/images/eternal-twin/icon_small.png') }}">{{ 'Registrieren'|trans({},'login') }}</button></a>
                     </div>
                 </div>
 
                 {% if myh %}
-                    <div class="band"><span>{{ 'oder'|trans({},'global') }}</span></div>
+                    <div class="or"></div>
                     <div class="row-flex v-center wrap">
                         <div class="padded cell rw-6 hide-md hide-sm">
                             <div class="note justify">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="padded cell ro-6 rw-6 ro-md-0 rw-md-12">
+                        <div class="padded cell ro-3 rw-6 ro-md-0 rw-md-12">
                             <button id="myh">{{ 'Über MyHordes einloggen'|trans({},'login') }}</button>
                         </div>
                     </div>
