--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1602,3 +1602,23 @@ ul.hordes-bullets {
 div.or {
   height: 100px; width: 100%; background: url("../img/or.png") no-repeat center;
 }
+
+div.welcome-teaser {
+  height: 500px; margin-right: -5px;
+  &>span {
+    font-size: 37px; position: relative; display: inline-block;
+    width: 243px; top: 18px; left: 70px; transform: rotate(-1.8deg);
+    text-align: center; font-weight: bold; color: #3d0000; text-shadow: 0 0 4px rgba(0,0,0,0.5);
+  }
+  &.teaser-1 { background: url("../img/teaser1.jpg") no-repeat top right; &>span { left: 80px; top: 25px; } }
+  &.teaser-2 { background: url("../img/teaser2.jpg") no-repeat top right; }
+  &.teaser-3 { background: url("../img/teaser3.jpg") no-repeat top right; }
+  &.teaser-4 { background: url("../img/teaser4.jpg") no-repeat top right; }
+  &.teaser-5 { background: url("../img/teaser5.jpg") no-repeat top right; }
+  &.teaser-6 { background: url("../img/teaser6.jpg") no-repeat top right; }
+  &.teaser-7 { background: url("../img/teaser7.png") no-repeat top right; }
+  &.teaser-8 { background: url("../img/teaser8.jpg") no-repeat top right; }
+  &.teaser-9 { background: url("../img/teaser9.jpg") no-repeat top right; }
+  &.teaser-10 { background: url("../img/teaser10.jpg") no-repeat top right; }
+  &.teaser-11 { background: url("../img/teaser11.jpg") no-repeat top right; }
+}
