--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -190,6 +190,14 @@
                 <h5>{% trans from 'game' %}Was geschieht mit dieser Leiche?{% endtrans %}</h5>
                 {% if owner.home.holdsBody %}
                     <span class="disposal">{{'Da %citizen% tot ist, besteht ein hohes Risiko, dass sein Körper mit ansteckenden Keimen von <em>%townname%</em> kontaminiert ist. Wenn wir nicht wollen, dass er wieder aufersteht und uns angreift, muss er entweder mit Wasser übergossen oder weggeworfen werden.'|trans({'%citizen%': owner.name, '%townname%': owner.town.name}, 'game')|raw}}</span>
+                    {% if has_cremato %}
+                        <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Cooked') }}">
+                            <img alt="" src="{{ asset('build/images/item/item_meat.gif') }}" />{{ 'Leiche grillen'|trans({},'game') }}
+                            <div class="tooltip help">
+                                {{'Dank des von der Stadt gebauten Kremato-Cue kannst du diese Leiche <strong>in Verpflegung umwandeln</strong>. Aber willst du das wirklich tun?'|trans({}, 'game')|raw}}
+                            </div>
+                        </button>
+                    {% endif %}
                     <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Watered') }}">
                         <img alt="" src="{{ asset('build/images/item/item_water.gif') }}" />{{ 'Leiche mit Wasser übergießen'|trans({},'game') }}
                         <div class="tooltip help">
@@ -202,14 +210,6 @@
                             {{'Wenn du eine Leiche entsorgen möchtest, ohne dafür Wasser zu verbrauchen, kannst du sie <strong>nach draußen ziehen</strong>. Diese Aktion verbraucht <strong>2 Aktionspunkte</strong>.'|trans({}, 'game')|raw}}
                         </div>
                     </button>
-                    {% if has_cremato or true %}
-                        <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Cooked') }}">
-                            <img alt="" src="{{ asset('build/images/item/item_meat.gif') }}" />{{ 'Leiche grillen'|trans({},'game') }}
-                            <div class="tooltip help">
-                                {{'Dank des von der Stadt gebauten Kremato-Cue kannst du diese Leiche <strong>in Verpflegung umwandeln</strong>. Aber willst du das wirklich tun?'|trans({}, 'game')|raw}}
-                            </div>
-                        </button>
-                    {% endif %}
                     {% if can_devour %}
                         <button x-devour-citizen {% if not allow_devour_corpse %}disabled{% endif %}><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" />{{ 'Die Leiche verspeisen!'|trans({},'game') }}</button>
                     {% endif %}
