Fix death count in Citizen view

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -353,6 +353,12 @@ div.town-banner {
     font-size: 1.2rem;
     background-color: #5c2b20;
   }
+  .citizen_count {
+    color: white;
+    em {
+      color: @myhordes-smalltext;
+    }
+  }
 }
 
 .citizen-chest {
