fix position and style of dead ghoul's home

--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -23,14 +23,6 @@
         {% endif %})
     </h5>
 
-    {% if not owner.alive and owner.hasRole('ghoul') %}
-        <div class="note note-critical">
-            {% trans with {'%user%': owner.name} from 'game' %}
-                Die offensichtlichen Spuren zeigen, dass %user% die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: <strong>%user% war ein Ghoul</strong>!
-            {% endtrans %}
-        </div>
-    {% endif %}
-
     {% if hasClairvoyance and owner.alive %}
         <div class="clairvoyance">
             <img src="{{ asset('build/images/heroskill/small_view.gif') }}" /> <strong>{{'Hellseherei'|trans({},'game')}} : </strong>
@@ -103,6 +95,14 @@
             </div>
         </div>
     </div>
+
+    {% if not owner.alive and owner.hasRole('ghoul') %}
+        <div class="note note-critical note-critical-big">
+            {% trans with {'%user%': owner.name} from 'game' %}
+                Die offensichtlichen Spuren zeigen, dass %user% die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: <strong>%user% war ein Ghoul</strong>!
+            {% endtrans %}
+        </div>
+    {% endif %}
 
     <div class="row">
         <div class="padded cell rw-6 citizen-home">
