--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -565,7 +565,13 @@ div.note {
     strong {
       color: #f8eacb;
     }
+    &.note-critical-big {
+      font-weight: 1000;
+      font-size: 110%;
+      line-height: 1.2;
+    }
   }
+  
   &.note-light {
     background-color: #5c2b20;
   }
