Display a custom message when trying to send items to outsider in chaos

--- a/templates/scripts/errors/forum.txt.twig
+++ b/templates/scripts/errors/forum.txt.twig
@@ -5,3 +5,4 @@
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorForumLimitHit') }}  : '{{'Spamschutz: Du musst eine Weile warten, bis du wieder schreiben kannst.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorGPMMemberLimitHit') }}  : '{{'Du kannst keine weiteren Spieler zu dieser Nachricht hinzufügen.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorGPMThreadLimitHit') }}  : '{{'Spamschutz: Du hast heute bereits eine große Anzahl an Spielern kontaktiert; du musst eine Weile warten, bevor du eine neue Nachricht erstellen kannst.'|trans({},'global')|e('js')}}',
+{{ constant('App\\Controller\\Messages\\MessageController::ErrorPMItemChaosOut') }} : '{{'Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.'|trans({},'global')|e('js')}}',
