--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -134,7 +134,7 @@
                                 </div>
                                 {% if scout %}<button id="scout_ruin_discover">{{ 'Aufklärer: Ruinen erkunden'|trans({},'game') }}<img alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" /><div class="tooltip help">{{ 'Mit dieser Aktion kannst du ermitteln, welches Gebäude hier vergraben ist.'|trans({},'game') }}</div></button>{% endif %}
                             {% else %}
-                                <img src="{{ asset('build/images/icons/small_help.gif') }}" /> <span class="ruin-name">{{ 'Ruine'|trans({},'game') }} : <b>{{ zone.prototype.label|trans({}, 'game') }}</b></span><br />
+                                <img alt="" src="{{ asset('build/images/icons/small_help.gif') }}" /> <span class="ruin-name">{{ 'Ruine'|trans({},'game') }} : <b>{{ zone.prototype.label|trans({}, 'game') }}</b></span><br />
                                 <span class="ruin-desc">{{ zone.prototype.description|trans({}, 'game') }}</span>
                             {% endif %}
 
@@ -257,7 +257,7 @@
                                 </div>
                             </div>
                         {% endif %}
-                        <br />{{ help_lnk('Die Kontrollpunkte'|trans({}, 'help'), 'help', {'name': 'control_points'}) }}</>
+                        <br />{{ help_lnk('Die Kontrollpunkte'|trans({}, 'help'), 'help', {'name': 'control_points'}) }}
                     </div>
                 </div>
             </div>
@@ -328,6 +328,7 @@
                                 <button {% if not can_explore%}disabled{% endif%} id="enter_ruin_button"  >
                                     <img class="icon left" alt="" src="{{ asset('build/images/icons/planner.gif') }}" />
                                     {% trans with {'%ruin%': zone.prototype.label|trans({},'game')} from 'game'  %}%ruin% betreten{% endtrans %}
+                                    <div class="tooltip help">{{ 'Diese Aktion ermöglicht es dir, die Tiefen dieses Gebäude zu erkunden und wertvolle Ressourcen zu bergen. Sei aber nicht zu gierig, denn deine Zeit ist begrenzt!'|trans({},'game') }}</div>
                                 </button>
                             {% elseif zone.buryCount == 0%}
                                 <button id="dig_ruin_button" {% if not dig_ruin or zone.buryCount > 0 %}disabled{% endif %} >
@@ -809,13 +810,13 @@
                     } );
             });
         {% if can_explore %}
-        $.html.addEventListenerAll( '#enter_ruin_button', 'click', function() {
-            if (confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
-                $.ajax.easySend( '{{ path('beyond_desert_enter_ruin_controller') }}', {},
-                    function () {
-                        $.ajax.load(null, '{{ path('exploration_dashboard') }}', true);
-                    } );
-        } );
+            $.html.addEventListenerAll( '#enter_ruin_button', 'click', function() {
+                if (confirm('{{ 'Das Gebäude betreten? (Diese Aktion kostet 1AP)'|trans({},'game')|e('js') }}'))
+                    $.ajax.easySend( '{{ path('beyond_desert_enter_ruin_controller') }}', {},
+                        function () {
+                            $.ajax.load(null, '{{ path('exploration_dashboard') }}', true);
+                        } );
+            } );
         {% endif %}
         let dig_r_button = document.getElementById('dig_ruin_button');
         if (dig_r_button)
