--- a/templates/ajax/game/town/well.html.twig
+++ b/templates/ajax/game/town/well.html.twig
@@ -29,7 +29,11 @@
                 <div class="water" style="height: {{ 6 + 59 * min(1.0, (rations_left / 100.0)) }}%"></div>
                 <div class="mask"></div>
                 <div class="overlay">
-                    {% trans with {'%rations%': rations_left} from 'game' %}%rations% Rationen Wasser übrig{% endtrans %}
+                    {% if rations_left > 0 %}
+                        {{ '%rations% Rationen Wasser übrig'|trans({'%rations%': rations_left},'game') }}
+                    {% else %}
+                        <span class="small"><b>{{ 'Kein Wasser mehr!'|trans({},'game') }}</b></span>
+                    {% endif %}
                 </div>
             </div>
         </div>
