--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -89,7 +89,7 @@
                                     <span class="invasion">{{ 'Tor ist offen!'|trans({},'game') }}</span>
                                 {% endif %}
                                 {% if gazette.invasion > 0 %}
-                                    <br><span class="invasion">{{ gazette.invasion }} {{ 'Zombies sind eingedrungen.'|trans({},'game') }}</span>
+                                    <br><span class="invasion hide-sm">{{ gazette.invasion }} {{ 'Zombies sind eingedrungen.'|trans({},'game') }}</span>
                                 {% endif %}
                             </div>
                             <div class="nightstat nightstat-deaths">
@@ -99,7 +99,7 @@
                                     <span class="count">{{ 'Keine Opfer'|trans({},'game') }}</span>
                                 {% endif %}
                                 {% if gazette.terror > 0 %}
-                                    <br><span class="terror">{{ gazette.terror }} {{ 'vor Angst erstarrt'|trans({},'game') }}</span>
+                                    <br><span class="terror hide-sm">{{ gazette.terror }} {{ 'vor Angst erstarrt'|trans({},'game') }}</span>
                                 {% endif %}
                             </div>
                         </div>
