--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -328,9 +328,30 @@
             document.getElementById('pm-conversation-list').addEventListener('scroll', fun_conv_loader_control);
 
             const fun_msg_events = function() {
+                $.html.addEventListenerAll('ul.group-conversation>li div[x-unveil]', 'click', function(e,elem) {
+                    document.querySelector('[x-domain="m-d"][x-identifier="' + elem.getAttribute('x-unveil') + '"]').classList.remove('collapsed');
+                });
                 $.html.addEventListenerAll('ul.group-conversation>li .pm-button[x-report-url]', 'click', function(e,elem) {
                     if (confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
                         $.ajax.easySend( elem.getAttribute('x-report-url'), {}, (data)=>{ if (data.msg) $.html.notice(data.msg); });
+                });
+                $.html.addEventListenerAll('ul.group-conversation>li .pm-button[x-pin-url]', 'click', function(e,elem) {
+                    if (confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                        $.ajax.easySend( elem.getAttribute('x-pin-url'), {}, ()=>{
+                            document.querySelector('[x-message-id="' + elem.getAttribute('x-message-id') + '"][x-pin-state="' + elem.getAttribute('x-pin-state') + '"]').classList.add('hidden');
+                            document.querySelector('[x-message-id="' + elem.getAttribute('x-message-id') + '"][x-pin-state]:not([x-pin-state="' + elem.getAttribute('x-pin-state') + '"])').classList.remove('hidden');
+                            let selected = document.querySelector('.pm-conversation-list>li.selected');
+                            if (selected) selected.click();
+                        });
+                });
+                $.html.addEventListenerAll('ul.group-conversation>li .pm-button[x-collapse-url]', 'click', function(e,elem) {
+                    if (confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                        $.ajax.easySend( elem.getAttribute('x-collapse-url'), {}, ()=>{
+                            if (elem.getAttribute('x-collapse-state') === "1")
+                                document.querySelector('[x-domain="m-d"][x-identifier="' + elem.getAttribute('x-message-id') + '"]').classList.add('collapsed');
+                            document.querySelector('[x-message-id="' + elem.getAttribute('x-message-id') + '"][x-collapse-state="' + elem.getAttribute('x-collapse-state') + '"]').classList.add('hidden');
+                            document.querySelector('[x-message-id="' + elem.getAttribute('x-message-id') + '"][x-collapse-state]:not([x-collapse-state="' + elem.getAttribute('x-collapse-state') + '"])').classList.remove('hidden');
+                        });
                 });
             }
 
