--- a/templates/ajax/game/item_tooltip.html.twig
+++ b/templates/ajax/game/item_tooltip.html.twig
@@ -9,5 +9,5 @@
     {% if item.prototype.deco > 0 %}<div class="item-tag item-tag-deco">{{ 'Einrichtungsgegenstand'|trans({},'items') }}</div>{% endif %}
     {% if item.prototype.hasProperty('defence') %}<div class="item-tag item-tag-defense">{{ 'Verteidigungsgegenstand'|trans({},'items') }}</div>{% endif %}
     {% if item.prototype.hasProperty('weapon') %}<div class="item-tag item-tag-weapon">{{ 'Waffe'|trans({},'items') }}</div>{% endif %}
-    {% if item.prototype.watchpoint > 0 %}<div class="item-tag item-tag-weapon">{{ 'Nachtwache-Waffen'|trans({},'items') }} <em>({{item.prototype.watchpoint}} {{ 'Pkte'|trans({},'items') }})</em></div>{% endif %}
+    {% if item.prototype.watchpoint > 0 %}<div class="item-tag item-tag-weapon">{{ 'Nachtwache-Waffen'|trans({},'items') }} <em>({{item|watchpoint}} {{ 'Pkte'|trans({},'items') }})</em></div>{% endif %}
 </div>
